--- a/res/layout/sitedetailactivity.xml
+++ b/res/layout/sitedetailactivity.xml
@@ -4,5 +4,5 @@
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
   <TextView android:text="Site Details" />
-  
+  <Button android:text="Email Contact" />
 </LinearLayout>
