--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -18,9 +18,7 @@
 		<EditText
 			android:id="@+id/searchText"
 			android:layout_height="wrap_content"
-			android:hint="Search" 
-			android:layout_gravity="center_horizontal|center_vertical"
-			android:layout_width="wrap_content"/>
+			android:layout_gravity="center_horizontal|center_vertical" android:layout_width="wrap_content" android:hint="Search                 "/>
 		<Button
 			android:id="@+id/SearchButton"
 			android:text="Search"
