--- a/res/layout/layers.xml
+++ b/res/layout/layers.xml
@@ -3,6 +3,13 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
+	<LinearLayout
+		android:orientation="horizontal"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content">
+		<Button android:layout_height="wrap_content" android:id="@+id/HybridButton" android:layout_width="fill_parent" android:text="Satellite" android:layout_alignParentTop="true"></Button>
+		<Button android:layout_height="wrap_content" android:id="@+id/MapButton" android:layout_width="fill_parent" android:text="Map" android:layout_alignParentTop="true"></Button>
+		</LinearLayout>
 <ListView
 		android:id="@id/android:list"
 		android:layout_width="fill_parent"
