Site detail thumbnail view is invisible when image is absent, and fits into bounds just right.

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -14,9 +14,8 @@
         		android:id="@+id/SiteIconImageButton" 
         		android:layout_toLeftOf="@+id/SiteNameTextView"
 	        	android:src="@drawable/location" 
-    	    	android:layout_gravity="left|center_vertical" 
-        		android:onClick="@string/userLocationClicked">
-    		</ImageButton>
+    	    	android:layout_gravity="left|center_vertical"/>
+    	    	<!-- android:onClick="@string/userLocationClicked" -->
 			<EditText
 				android:id="@+id/searchText"
 				android:layout_height="wrap_content"
