--- a/res/layout/site_image_view_activity.xml
+++ b/res/layout/site_image_view_activity.xml
@@ -3,5 +3,12 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
-    <ImageView android:layout_height="fill_parent" android:layout_width="fill_parent" android:scaleType="fitCenter" android:id="@+id/ImageView_SiteImageFullScreen" android:layout_weight="1.0"></ImageView>
+    <ImageView  android:visibility="gone" android:adjustViewBounds="true"
+        android:layout_width="93sp"
+        android:layout_height="93sp"
+	   	android:layout_marginTop="6sp"
+	   	android:layout_marginLeft="6sp" 
+    	android:layout_marginRight="6sp" 
+    	android:id="@+id/ImageView_SiteImageFullScreen" 
+    	android:layout_weight="1.0"></ImageView>
 </LinearLayout>
