--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -37,7 +37,9 @@
 				android:layout_width="fill_parent"
 				android:layout_height="fill_parent"
 				android:apiKey="0GQrhHyBPjQdVyXlfEXbSalpjfjaGAk-0hdrTxQ"
-				android:clickable="true"></com.google.android.maps.MapView>
+				android:clickable="true">
+				<!-- android:apiKey="0GQrhHyBPjQce3-CumhLPh31pc5VTiMP2gXbbJg" -->
+				</com.google.android.maps.MapView>
 			<ImageView
 				android:src="@drawable/welcome_instructions" 
 				android:layout_gravity="center_vertical|center_horizontal" 
