--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content" 
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent" android:layout_height="wrap_content"
 	android:id="@+id/frameLayout1">
 	<com.sbasite.sbasites.view.SBAMapView
-		android:id="@+id/map"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
-		android:apiKey="0GQrhHyBPjQdVyXlfEXbSalpjfjaGAk-0hdrTxQ"
+		android:id="@+id/map" android:layout_width="fill_parent"
+		android:layout_height="fill_parent" android:apiKey="0GQrhHyBPjQce3-CumhLPh31pc5VTiMP2gXbbJg"
 		android:clickable="true">
+		<!-- Debug API Key -->
+		<!-- android:apiKey="0GQrhHyBPjQce3-CumhLPh31pc5VTiMP2gXbbJg" -->
+		<!-- Release API Key -->
+		<!-- android:apiKey="0GQrhHyBPjQdVyXlfEXbSalpjfjaGAk-0hdrTxQ" -->
 	</com.sbasite.sbasites.view.SBAMapView>
-	<ImageView
-		android:src="@drawable/welcome_instructions" 
-		android:layout_gravity="center_vertical|center_horizontal" 
-		android:layout_height="fill_parent" 
-		android:id="@+id/imageView1" 
-		android:layout_width="fill_parent" 
-		android:visibility="visible" />
+	<ImageView android:src="@drawable/welcome_instructions"
+		android:layout_gravity="center_vertical|center_horizontal"
+		android:layout_height="fill_parent" android:id="@+id/imageView1"
+		android:layout_width="fill_parent" android:visibility="visible" />
+	<ProgressBar android:id="@+id/progressBar1"
+		android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="top|right" android:layout_margin="6dip"></ProgressBar>
 </FrameLayout>
