--- a/res/layout/listview.xml
+++ b/res/layout/listview.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="vertical"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
 	<ListView
 		android:id="@id/android:list"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:layout_above="@id/Button01"
 		android:layout_alignParentTop="true"/>
-	<Button android:layout_height="wrap_content"
- 		android:id="@+id/Button01"
- 		android:layout_width="fill_parent"
- 		android:text="@string/done" 
- 		android:layout_alignParentBottom="true"/>
-</RelativeLayout>
+</LinearLayout>
