--- a/res/layout/site_list_item.xml
+++ b/res/layout/site_list_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.sbasite.sbasites.view.SiteListItem xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@drawable/list_item_background">
 	<ImageView
 	   	android:id="@+id/site_pin_icon"
 	   	android:layout_width="32px"
