--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -11,10 +11,9 @@
 		<!-- Release API Key -->
 		<!-- android:apiKey="0GQrhHyBPjQdVyXlfEXbSalpjfjaGAk-0hdrTxQ" -->
 	</com.sbasite.sbasites.view.SBAMapView>
+	<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="top|center_horizontal" android:id="@+id/imageView2" android:layout_margin="10dip" android:fadingEdge="horizontal|vertical" android:src="@drawable/logo_small"></ImageView>
 	<ImageView android:src="@drawable/welcome_instructions"
 		android:layout_gravity="center_vertical|center_horizontal"
 		android:layout_height="fill_parent" android:id="@+id/imageView1"
 		android:layout_width="fill_parent" android:visibility="visible" />
-	<ProgressBar android:id="@+id/progressBar1"
-		android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="top|right" android:layout_margin="6dip"></ProgressBar>
 </FrameLayout>
